update sample env

--- a/.env-sample
+++ b/.env-sample
@@ -1,2 +1,4 @@
+# Add your GitHub token
 GITHUB_TOKEN=
-ABSOLUTE_PATH_TO_CLONE_TO=/Users/CHANGEME/Desktop/
+# This is where your ghorg_org directory will be created, use absolute pathing
+ABSOLUTE_PATH_TO_CLONE_TO=
