update sample env

--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,4 @@
 # Add your GitHub token
 GITHUB_TOKEN=
-# This is where your ghorg_org directory will be created, use absolute pathing
+# This is where your org_ghorg directory will be created, use absolute pathing
 ABSOLUTE_PATH_TO_CLONE_TO=
