default to keychain GitHub token

--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,6 @@
 # Add your GitHub token
+# Defaults to using key returned by
+# $ security find-internet-password -s github.com  | grep "acct" | awk -F\" '{ print $4 }'
 GITHUB_TOKEN=
 # This is where your org_ghorg directory will be created, use absolute pathing
 ABSOLUTE_PATH_TO_CLONE_TO=
