update env var names

--- a/.env-sample
+++ b/.env-sample
@@ -1,9 +1,9 @@
 # Add your GitHub token
 # Defaults to using key returned by
 # $ security find-internet-password -s github.com  | grep "acct" | awk -F\" '{ print $4 }'
-GITHUB_TOKEN=
+GHORG_GITHUB_TOKEN=
 # This is where your org_ghorg directory will be created, use absolute pathing
-# Defaults to $HOME/Desktop
-ABSOLUTE_PATH_TO_CLONE_TO=
+# Defaults to $HOME/Desktop/
+GHORG_ABSOLUTE_PATH_TO_CLONE_TO=
 # Branch ghorg resets and leaves checked out, defaults to master
 GHORG_BRANCH=
