--- a/.env-sample
+++ b/.env-sample
@@ -2,8 +2,13 @@
 # Defaults to using key returned by
 # $ security find-internet-password -s github.com  | grep "acct" | awk -F\" '{ print $4 }'
 GHORG_GITHUB_TOKEN=
+
 # This is where your org_ghorg directory will be created, use absolute pathing
 # Defaults to $HOME/Desktop/
 GHORG_ABSOLUTE_PATH_TO_CLONE_TO=
+
 # Branch ghorg resets and leaves checked out, defaults to master
 GHORG_BRANCH=
+
+# How you'd like to clone the repos (https or ssh), defaults to https
+GHORG_CLONE_PROTOCOL=
