--- a/.env-sample
+++ b/.env-sample
@@ -3,8 +3,7 @@
 # $ security find-internet-password -s github.com  | grep "acct" | awk -F\" '{ print $4 }'
 GHORG_GITHUB_TOKEN=
 
-# This is where your org_ghorg directory will be created, use absolute pathing
-# Defaults to $HOME/Desktop/
+# This is where your *_ghorg directory will be created, use absolute pathing, defaults to $HOME/Desktop/
 GHORG_ABSOLUTE_PATH_TO_CLONE_TO=
 
 # Branch ghorg resets and leaves checked out, defaults to master
