--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -1,13 +1,14 @@
+---
 # Add your GitHub token
 # Defaults to using key returned by
 # $ security find-internet-password -s github.com  | grep "acct" | awk -F\" '{ print $4 }'
-GHORG_GITHUB_TOKEN=
+GHORG_GITHUB_TOKEN:
 
 # This is where your *_ghorg directory will be created, use absolute pathing, defaults to $HOME/Desktop/
-GHORG_ABSOLUTE_PATH_TO_CLONE_TO=
+GHORG_ABSOLUTE_PATH_TO_CLONE_TO:
 
 # Branch ghorg resets and leaves checked out, defaults to master
-GHORG_BRANCH=
+GHORG_BRANCH:
 
 # How you'd like to clone the repos (https or ssh), defaults to https
-GHORG_CLONE_PROTOCOL=
+GHORG_CLONE_PROTOCOL:
