--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -25,3 +25,9 @@ GHORG_SCM_TYPE:
 # Defaults to using key returned by
 # $ security find-internet-password -s gitlab.com  | grep "acct" | awk -F\" '{ print $4 }'
 GHORG_GITLAB_TOKEN:
+
+# Add your Bitbucket app password
+# https://confluence.atlassian.com/bitbucket/app-passwords-828781300.html
+GHORG_BITBUCKET_APP_PASSWORD:
+
+GHORG_BITBUCKET_USERNAME:
