--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -39,7 +39,7 @@ GHORG_SCM_BASE_URL:
 # flag (--skip-archived)
 GHORG_SKIP_ARCHIVED:
 
-# Uses the --mirror flag when cloning (true/false)
+# Backup mode, clone as mirror, no working copy (ignores branch parameter) (true/false)
 # default: false
 # flag (--backup)
 GHORG_BACKUP:
