--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,5 +1,5 @@
 name: Go
-on: [push]
+on: [release]
 jobs:
 
   build:
@@ -25,4 +25,15 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v .
+      run: go build -v -o ghorg .
+      
+    - name: ls
+      run: ls
+      
+    - name: Upload artifact
+      with:
+        name: ghorg
+        path: ghorg
+      uses: actions/upload-artifact@v1.0.0
+      
+      
