--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,41 +1,21 @@
 name: Go
-on: [release]
+on: [pull_request]
 jobs:
-
-  build:
-    name: Build
+  build_and_test:
+    name: Build and Test
     runs-on: ubuntu-latest
     steps:
-
-    - name: Set up Go 1.13
+    - name: Set up Go 1.14
       uses: actions/setup-go@v1
       with:
-        go-version: 1.13
+        go-version: 1.14
       id: go
-
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
-
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
-
     - name: Build
       run: go build -v -o ghorg .
-      
-    - name: Upload to release
-      uses: JasonEtco/upload-to-release@master
-      with:
-        args: ghorg application/octet-stream
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-    - name: Upload artifact
-      with:
-        name: ghorg
-        path: ghorg
-      uses: actions/upload-artifact@v1.0.0
+    - name: Test
+      run: go test -v ./...
