--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,4 +18,6 @@ jobs:
     - name: Build
       run: go build -v -o ghorg .
     - name: Test
-      run: GHORG_ENV=test go test -v ./...
+      run: go test -v ./...
+      env:
+        GHORG_ENV: test
