add match prefix

--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -105,3 +105,8 @@ GHORG_CONCURRENCY:
 # default: {org/user you are cloning}_ghorg
 # flag (--output-dir)
 GHORG_OUTPUT_DIR:
+
+# Only clone repos with matching prefix, can be a comma separated list
+# default: ""
+# flag (--match-prefix)
+GHORG_MATCH_PREFIX:
