--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,6 +12,10 @@ jobs:
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
+    - name: Set configuration file
+      run: |
+        mkdir -p /home/runner/.config/ghorg
+        curl https://raw.githubusercontent.com/gabrie30/ghorg/master/sample-conf.yaml > /home/runner/.config/ghorg/conf.yaml
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
