--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -9,12 +9,6 @@
 # flag (--token, -t) eg: --token=bGVhdmUgYSBjb21tZW50IG9uIGlzc3VlIDY2
 GHORG_GITHUB_TOKEN:
 
-# A comma seperated list of topics to filter by
-# Defaults to ""
-# If any topics exist here, ghorg will only clone repos that match at least one of these topics
-GHORG_GITHUB_TOPICS:
-
-
 # +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
 # |G|I|T|L|A|B| |S|P|E|C|I|F|I|C|
 # +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
@@ -82,6 +76,11 @@ GHORG_CLONE_TYPE:
 # default: on
 # flag (--color)
 GHORG_COLOR:
+
+# A comma seperated list of topics to filter by, currently github/gitea only
+# Defaults to ""
+# If any topics exist here, ghorg will only clone repos that match at least one of these topics
+GHORG_TOPICS:
 
 # Skip archived repos (true/false), currently github/gitlab only
 # default: false
