--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -24,7 +24,6 @@ GHORG_GITLAB_TOKEN:
 # flag (--preserve-dir)
 GHORG_PRESERVE_DIRECTORY_STRUCTURE:
 
-
 # +-+-+-+-+-+ +-+-+-+-+-+-+-+-+
 # |G|I|T|E|A| |S|P|E|C|I|F|I|C|
 # +-+-+-+-+-+ +-+-+-+-+-+-+-+-+
@@ -33,7 +32,6 @@ GHORG_PRESERVE_DIRECTORY_STRUCTURE:
 # Settings -> Applications -> Generate Token
 # flag (--token, -t) eg: --token=bGVhdmUgYSBjb21tZW50IG9uIGlzc3VlIDY2
 GHORG_GITEA_TOKEN:
-
 
 # +-+-+-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+
 # |B|I|T|B|U|C|K|E|T| |S|P|E|C|I|F|I|C|
@@ -46,7 +44,6 @@ GHORG_BITBUCKET_APP_PASSWORD:
 
 # flag (--bitbucket-username)
 GHORG_BITBUCKET_USERNAME:
-
 
 # +-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+-+-+-+-+-+
 # |G|E|N|E|R|A|L| |C|O|N|F|I|G|U|R|A|T|I|O|N|
@@ -73,7 +70,8 @@ GHORG_CLONE_PROTOCOL:
 GHORG_ABSOLUTE_PATH_TO_CLONE_TO:
 
 # Branch ghorg resets and leaves checked out
-# default:  master
+# default: default branch
+# NOTE: if no default branch is found on the repo, will fallback to using master
 # flag (--branch, -b)
 GHORG_BRANCH:
 
