--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -64,8 +64,8 @@ GHORG_SCM_TYPE:
 # flag (--protocol)
 GHORG_CLONE_PROTOCOL:
 
-# This is where your *_ghorg directory will be created, use absolute pathing. Must end with /, if not one will be added for you
-# default: $HOME/Desktop/ghorg
+# This is where your *_ghorg directory will be created, use absolute pathing, shell expansions will not work
+# default: YOUR_HOME_DIR/Desktop/ghorg
 # flag (--path, -p)
 GHORG_ABSOLUTE_PATH_TO_CLONE_TO:
 
