--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -77,7 +77,7 @@ GHORG_BRANCH:
 
 # Type of entity to clone (user or org)
 # default: org
-# to clone all of your own repos from github don't specify any user eg. "ghorg clone --clone-type=user"
+# to clone all of your own repos from github don't specify any user eg. "ghorg clone --clone-type=user --output-dir=personal"
 # flag (--clone-type, -c)
 GHORG_CLONE_TYPE:
 
