--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,21 +1,26 @@
+# Running locally https://yonatankra.com/how-to-test-github-actions-locally-using-act/
 name: Go
 on: [push, pull_request]
 jobs:
   build_and_test:
     name: Build and Test
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest]
     steps:
-    - name: Set up Go 1.14
+    - name: Set up Go 1.16
       uses: actions/setup-go@v1
       with:
-        go-version: 1.14
+        go-version: 1.16
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
     - name: Set configuration file
       run: |
-        mkdir -p /home/runner/.config/ghorg
-        curl https://raw.githubusercontent.com/gabrie30/ghorg/master/sample-conf.yaml > /home/runner/.config/ghorg/conf.yaml
+        echo $HOME
+        mkdir -p $HOME/.config/ghorg
+        cp sample-conf.yaml $HOME/.config/ghorg/conf.yaml
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
@@ -23,3 +28,33 @@ jobs:
       run: go build -v -o ghorg .
     - name: Test
       run: go test -v ./...
+    - name: Run GitHub Integration Tests
+      run: scripts/github_integration_tests.sh
+      env:
+        GITHUB_TOKEN: ${{ secrets.GHORG_GITHUB_TOKEN }}
+  build_and_test_windows:
+    name: Build and Test Windows
+    runs-on: windows-latest
+    steps:
+    - name: Set up Go 1.16
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.16
+      id: go
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v1
+    - name: Set configuration file
+      run: |
+        mkdir C:\Users\runneradmin\.config\ghorg
+        copy sample-conf.yaml C:\Users\runneradmin\.config\ghorg\conf.yaml
+    - name: Get dependencies
+      run: |
+        go get -v -t -d ./...
+    - name: Build
+      run: env GOOS=windows GOARCH=386 go build -v -o ghorg.exe .
+    - name: Test
+      run: go test -v ./...
+    - name: Run GitHub Integration Tests
+      run: scripts/windows_github_integration_tests.bat
+      env:
+        GITHUB_TOKEN: ${{ secrets.GHORG_GITHUB_TOKEN }}
