--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -19,7 +19,7 @@ GHORG_GITHUB_TOKEN:
 # flag (--token, -t) eg: --token=bGVhdmUgYSBjb21tZW50IG9uIGlzc3VlIDY2
 GHORG_GITLAB_TOKEN:
 
-# clones repos in a directory structure that matches gitlab namespaces eg company/unit/subunit/app would clone into *_ghorg/unit/subunit/app
+# clones repos in a directory structure that matches gitlab namespaces eg company/unit/subunit/app would clone into ghorg/org/unit/subunit/app
 # default: false
 # flag (--preserve-dir)
 GHORG_PRESERVE_DIRECTORY_STRUCTURE:
@@ -64,8 +64,8 @@ GHORG_SCM_TYPE:
 # flag (--protocol)
 GHORG_CLONE_PROTOCOL:
 
-# This is where your *_ghorg directory will be created, use absolute pathing, shell expansions will not work
-# default: YOUR_HOME_DIR/Desktop/ghorg
+# This is where your ghorg directory will be created, use absolute pathing, shell expansions will not work
+# default: YOUR_HOME_DIR/ghorg
 # flag (--path, -p)
 GHORG_ABSOLUTE_PATH_TO_CLONE_TO:
 
@@ -111,8 +111,8 @@ GHORG_BACKUP:
 # flag (--concurrency)
 GHORG_CONCURRENCY:
 
-# Folder ghorg will clone all repos into, will force underscores and append _ghorg. Cloning will result in: GHORG_ABSOLUTE_PATH_TO_CLONE_TO/GHORG_OUTPUT_DIR/*
-# default: {org/user you are cloning}_ghorg
+# Folder ghorg will clone all repos into. Cloning will result in: GHORG_ABSOLUTE_PATH_TO_CLONE_TO/GHORG_OUTPUT_DIR/*
+# default: {org/user you are cloning}
 # flag (--output-dir)
 GHORG_OUTPUT_DIR:
 
