Add no clean flag

--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -125,6 +125,11 @@ GHORG_MATCH_PREFIX:
 # flag (--match-regex)
 GHORG_MATCH_REGEX:
 
+# Only clones new repos and does not perform a git clean on existing repos
+# default: false
+# flag (--no-clean)
+GHORG_NO_CLEAN:
+
 # Specifies the location of your ghorg conf.yaml, allowing you to have many configuration files, or none at all
 # default: ghorg looks in $HOME/.config/ghorg/conf.yaml, if not set in that location nor as a commandline flag, ghorg will use all default values
 # NOTE: this cannot be set in the configuration file and only available in ghorg v1.7.0+
