Add bitbucket integration tests

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,6 +27,11 @@ jobs:
       run: scripts/github_integration_tests.sh
       env:
         GITHUB_TOKEN: ${{ secrets.GHORG_GITHUB_TOKEN }}
+    - name: Run Bitbucket Integration Tests
+      run: scripts/bitbucket_integration_tests.sh
+      env:
+        BITBUCKET_TOKEN: ${{ secrets.GHORG_BITBUCKET_APP_PASSWORD }}
+        BITBUCKET_USERNAME: ${{ secrets.GHORG_BITBUCKET_USERNAME }}
   build_and_test_windows:
     name: Build and Test Windows
     runs-on: windows-latest
