--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,18 +9,18 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest]
     steps:
-    - name: Set up Go 1.16
+    - name: Set up Go 1.17
       uses: actions/setup-go@v1
       with:
-        go-version: 1.16
+        go-version: 1.17
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
     - name: Test
       run: go test -v ./...
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
+    # - name: Get dependencies
+    #   run: |
+    #     go get -v -t -d ./...
     - name: Build
       run: go build -v -o ghorg .
     - name: Run GitHub Integration Tests
@@ -39,7 +39,7 @@ jobs:
     - name: Set up Go 1.16
       uses: actions/setup-go@v1
       with:
-        go-version: 1.16
+        go-version: 1.17
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
@@ -47,9 +47,9 @@ jobs:
       run: |
         mkdir C:\Users\runneradmin\.config\ghorg
         copy sample-conf.yaml C:\Users\runneradmin\.config\ghorg\conf.yaml
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
+    # - name: Get dependencies
+    #   run: |
+    #     go get -v -t -d ./...
     - name: Build
       run: env GOOS=windows GOARCH=386 go build -v -o ghorg.exe .
     - name: Test
