--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,24 +9,26 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest]
     steps:
-    - name: Set up Go 1.16
+    - name: Set up Go 1.17
       uses: actions/setup-go@v1
       with:
-        go-version: 1.16
+        go-version: 1.17
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
     - name: Test
       run: go test -v ./...
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
     - name: Build
       run: go build -v -o ghorg .
     - name: Run GitHub Integration Tests
       run: scripts/github_integration_tests.sh
       env:
         GITHUB_TOKEN: ${{ secrets.GHORG_GITHUB_TOKEN }}
+    - name: Run Bitbucket Integration Tests
+      run: scripts/bitbucket_integration_tests.sh
+      env:
+        BITBUCKET_TOKEN: ${{ secrets.GHORG_BITBUCKET_APP_PASSWORD }}
+        BITBUCKET_USERNAME: ${{ secrets.GHORG_BITBUCKET_USERNAME }}
   build_and_test_windows:
     name: Build and Test Windows
     runs-on: windows-latest
@@ -34,7 +36,7 @@ jobs:
     - name: Set up Go 1.16
       uses: actions/setup-go@v1
       with:
-        go-version: 1.16
+        go-version: 1.17
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
@@ -42,9 +44,6 @@ jobs:
       run: |
         mkdir C:\Users\runneradmin\.config\ghorg
         copy sample-conf.yaml C:\Users\runneradmin\.config\ghorg\conf.yaml
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
     - name: Build
       run: env GOOS=windows GOARCH=386 go build -v -o ghorg.exe .
     - name: Test
@@ -53,3 +52,8 @@ jobs:
       run: scripts/windows_github_integration_tests.bat
       env:
         GITHUB_TOKEN: ${{ secrets.GHORG_GITHUB_TOKEN }}
+    - name: Run Bitbucket Integration Tests
+      run: scripts/bitbucket_integration_tests.sh
+      env:
+        BITBUCKET_TOKEN: ${{ secrets.GHORG_BITBUCKET_APP_PASSWORD }}
+        BITBUCKET_USERNAME: ${{ secrets.GHORG_BITBUCKET_USERNAME }}
