Add filter gitlab groups by regex

--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -27,6 +27,10 @@ GHORG_PRESERVE_DIRECTORY_STRUCTURE: false
 # flag (--insecure-gitlab-client)
 GHORG_INSECURE_GITLAB_CLIENT:
 
+# Exclude gitlab groups by regex
+# flag (--gitlab-group-exclude-match-regex)
+GHORG_GITLAB_GROUP_EXCLUDE_MATCH_REGEX:
+
 # +-+-+-+-+-+ +-+-+-+-+-+-+-+-+
 # |G|I|T|E|A| |S|P|E|C|I|F|I|C|
 # +-+-+-+-+-+ +-+-+-+-+-+-+-+-+
