--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -158,6 +158,10 @@ GHORG_FETCH_ALL: false
 # flag (--ghorgignore-path)
 GHORG_IGNORE_PATH:
 
+# Only emit critical output.
+# flag (--quiet)
+GHORG_QUIET:
+  
 # Specifies the location of your ghorg conf.yaml, allowing you to have many configuration files, or none at all
 # default: ghorg looks in $HOME/.config/ghorg/conf.yaml, if not set in that location nor as a commandline flag, ghorg will use all default values
 # NOTE: this cannot be set in the configuration file and only available in ghorg v1.7.0+
